<resources>
    <string name="app_name">Hebron 95.9FM</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="knowus">Get to know us</string>
    <string name="progs">Programme Schedule</string>
    <string name="listen">Listening Now</string>
    <string name="textTabTitle1">ABOUT US</string>
    <string name="textTabTitle2">LISTEN NOW</string>
    <string name="textTabTitle3">PROGRAMMES</string>
    <!--Test-->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--Live-->
    <string name="banner_ad_unit_id">ca-app-pub-6610707566113750/5691382024</string>
    <!--ABOUT US Strings-->
    <string name="aboutus1">About Us</string>
    <string name="aboutus2">
        Hebron FM 95.9 is a student trainee \n
        campus/community radio station,
        established by Covenant University, Ota, Ogun State,
        with the aim of reaching its immediate
        community with programmes that will enhance
        positive development through educational and instructional programmes.
        \n
        It is important to mention the worthy contribution of the Renaissance Set (graduating class of 2012/2013),
        via the Student Convocation Planning Committee (SCPC) who took up the construction of the radio studio as their
        LEGACY project in partnership with the University.
    </string>
    <string name="aboutus3">Our Vision</string>
    <string name="aboutus4">
        To become the leading campus radio station with a community outlook that will give
        our audience the best educative, informative and entertaining programmes.
    </string>
    <string name="aboutus5">Our Mission</string>
    <string name="aboutus6">
        To contribute positively to the development of our community
        through programmes that will provide the audience with relevant information that will
        empower them to impact their environment positively, and inspire them to attain greatness.
    </string>
    <string name="aboutus7">Location</string>
    <string name="aboutus8">Department of Mass Communication, Covenant University, Km 10 Idiroko road Ota, Ogun State. </string>
    <string name="aboutus9">Contact us</string>
    <string name="emailHeb"> <u>cuhebronfm@gmail.com </u> </string>
    <string name="instaHeb"> <u>hebronfm959</u> </string>
    <string name="twitHeb"> <u> \@HEBRONFM </u> </string>
    <string name="faceHeb"><u>CUhebronFM</u></string>
    <string name="dialler"> <u>08180696683</u></string>

    <string name="phone_permission_denied">Access to phone dialler is required</string>
    <string name="permission_required_toast">Phone permission is required for this app</string>
    <string name="phone_rationale_location">This app requires phone permission to call this number</string>
    <!--Schedule Strings TODO use arrays instead-->
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <array name="mon_ar">
        <item>NATIONAL/CU ANTHEM | 5:50 - 6:00am \n</item>
        <item>INSPIRATION HOUR | 6:00 - 7:00am \n</item>
        <item>HEALTHY MOMENTS | 7:00 - 7:15am \n</item>
        <item>LEADERSHIP TALK | 7:15 - 7:30am \n</item>
        <item>HISTORY TODAY | 7:30 - 7:45am \n</item>
        <item>NEWSPAPER REVIEW | 7:45 - 8:00am \n</item>
        <item>OJUMO AYO | 8:10 - 10:00am \n</item>
        <item>NIGERIA TODAY | 10:00 - 11:00am \n</item>
        <item>MUSIC/DCA | 11:00 - 12:00pm \n</item>
        <item>MUKULUMUKE | 12:00 - 2:00pm \n</item>
        <item>HEBRON FM NEWS | 2:00 - 2:15pm \n</item>
        <item>D.J‘S MIX | 2:15 - 3:00pm \n</item>
        <item>TASTEBUDS | 3:00 - 4:00pm \n</item>
        <item>ADELEBARE | 4:00 - 6:00pm \n</item>
        <item>HEBRON FM NEWS | 6:00 - 6:10pm \n</item>
        <item>SPORTS UPDATE | 6:10 - 7:00pm \n</item>
        <item>TRAFFIC CONTROL | 7:00 - 8:00pm \n</item>
        <item>LET’S TALK | 8:00 - 9:00pm \n</item>
        <item>MUSIC/DCA/D.J | 9:00 - 9:55pm \n</item>
        <item>SHUTDOWN | 9:55 - 10:00pm \n</item>
    </array>
    <array name="tue_ar">
        <item>NATIONAL/CU ANTHEM | 5:50 - 6:00am \n</item>
        <item>INSPIRATION HOUR | 6:00 - 7:00am \n</item>
        <item>HEALTHY MOMENTS | 7:00 - 7:15am \n</item>
        <item>LEADERSHIP TALK | 7:15 - 7:30am \n</item>
        <item>HISTORY TODAY | 7:30 - 7:45am \n</item>
        <item>NEWSPAPER REVIEW | 7:45 - 8:00am \n</item>
        <item>OJUMO AYO | 8:10 - 10:00am \n</item>
        <item>NIGERIA TODAY | 10:00 - 11:00am \n</item>
        <item>LANGUAGE | 11:30 - 12:00pm \n</item>
        <item>LUNCH TIME | 12:00 - 2:00pm \n</item>
        <item>HEBRON FM NEWS | 2:00 - 2:15pm \n</item>
        <item>PIDGIN PROGRAMME | 2:15 - 3:00pm \n</item>
        <item>STAR PROFILE | 3:00 - 4:00pm \n</item>
        <item>ADELEBARE | 4:00 - 6:00pm \n</item>
        <item>HEBRON FM NEWS | 6:00 - 6:10pm \n</item>
        <item>SPORTS UPDATE | 6:10 - 7:00pm \n</item>
        <item>TRAFFIC CONTROL | 7:00 - 8:00pm \n</item>
        <item>LOVE ZONE | 8:00 - 9:55pm \n</item>
        <item>SHUTDOWN | 9:55 - 10:00pm \n</item>
    </array>
    <array name="wed_ar">
        <item>NATIONAL/CU ANTHEM | 5:50 - 6:00am \n</item>
        <item>INSPIRATION HOUR | 6:00 - 7:00am \n</item>
        <item>HEALTHY MOMENTS | 7:00 - 7:15am \n</item>
        <item>LEADERSHIP TALK | 7:15 - 7:30am \n</item>
        <item>HISTORY TODAY | 7:30 - 7:45am \n</item>
        <item>NEWSPAPER REVIEW | 7:45 - 8:00am \n</item>
        <item>OJUMO AYO | 8:10 - 10:00am \n</item>
        <item>NIGERIA TODAY | 10:00 - 11:00am \n</item>
        <item>MUSIC/DCA | 11:00 - 12:00pm \n</item>
        <item>D.J MIX | 12:00 - 1:00pm \n</item>
        <item>MUSIC/DCA | 1:00 - 2:00pm \n</item>
        <item>HEBRON FM NEWS | 2:00 - 2:15pm \n</item>
        <item>FIGBADUN SAYO | 2:15 - 3:00pm \n</item>
        <item>MUSIC/DCA: FOREIGN | 3:00 - 4:00pm \n</item>
        <item>ADELEBARE | 4:00 - 6:00pm \n</item>
        <item>HEBRON FM NEWS | 6:00 - 6:10pm \n</item>
        <item>SPORTS UPDATE | 6:10 - 7:00pm \n</item>
        <item>TRAFFIC CONTROL | 7:00 - 8:00pm \n</item>
        <item>MUSIC/DCA | 8:00 - 9:55pm \n</item>
        <item>SHUTDOWN | 9:55 - 10:00pm \n</item>
    </array>
    <array name="thu_ar">
        <item>NATIONAL/CU ANTHEM | 5:50 - 6:00am \n</item>
        <item>INSPIRATION HOUR | 6:00 - 7:00am \n</item>
        <item>HEALTHY MOMENTS | 7:00 - 7:15am \n</item>
        <item>LEADERSHIP TALK | 7:15 - 7:30am \n</item>
        <item>HISTORY TODAY | 7:30 - 7:45am \n</item>
        <item>NEWSPAPER REVIEW | 7:45 - 8:00am \n</item>
        <item>OJUMO AYO | 8:10 - 10:00am \n</item>
        <item>NIGERIA TODAY | 10:00 - 11:00am \n</item>
        <item>MUSIC/DCA | 11:00 - 12:00pm \n</item>
        <item>D.J MIX | 12:00 - 1:00pm \n</item>
        <item>MUSIC/DCA | 1:00 - 2:00pm \n</item>
        <item>HEBRON FM NEWS | 2:00 - 2:15pm \n</item>
        <item>MUSIC/DCA | 2:15 - 4:00pm \n</item>
        <item>ADELEBARE | 4:00 - 6:00pm \n</item>
        <item>HEBRON FM NEWS | 6:00 - 6:10pm \n</item>
        <item>SPORTS UPDATE | 6:10 - 7:00pm \n</item>
        <item>TRAFFIC CONTROL | 7:00 - 8:00pm \n</item>
        <item>THROWBACK THURSDAY | 8:00 - 9:00pm \n</item>
        <item>I TESTIFY | 9:00 - 9:55pm \n</item>
        <item>SHUTDOWN | 9:55 - 10:00pm \n</item>
    </array>
    <array name="fri_ar">
        <item>NATIONAL/CU ANTHEM | 5:50 - 6:00am \n</item>
        <item>INSPIRATION HOUR | 6:00 - 7:00am \n</item>
        <item>HEALTHY MOMENTS | 7:00 - 7:15am \n</item>
        <item>LEADERSHIP TALK | 7:15 - 7:30am \n</item>
        <item>HISTORY TODAY | 7:30 - 7:45am \n</item>
        <item>NEWSPAPER REVIEW | 7:45 - 8:00am \n</item>
        <item>OJUMO AYO | 8:10 - 10:00am \n</item>
        <item>NIGERIA TODAY | 10:00 - 11:00am \n</item>
        <item>MUSIC/DCA | 11:00 - 12:00pm \n</item>
        <item>LUNCH TIME | 12:00 - 2:00pm \n</item>
        <item>HEBRON FM NEWS | 2:00 - 2:15pm \n</item>
        <item>IRE AKARI | 2:15 - 3:00pm \n</item>
        <item>MUSIC/DCA| 3:00 - 4:00pm \n</item>
        <item>MAKE WE YAN | 4:00 - 5:00pm \n</item>
        <item>WHO CARES MOMENTS | 5:00 - 6:00pm \n</item>
        <item>HEBRON NEWS | 6:00 - 6:10pm \n</item>
        <item>SPORTS UPDATE | 6:10 - 7:00pm \n</item>
        <item>TRAFFIC CONTROL | 7:00 - 8:00pm \n</item>
        <item>REMEMBER ME | 8:00 - 9:55pm \n</item>
        <item>SHUTDOWN | 9:55 - 10:00pm \n</item>
    </array>
    <array name="sat_ar">
        <item>NATIONAL/CU ANTHEM | 5:50 - 6:00am \n</item>
        <item>MUSIC/DCA | 6:00 - 7:30am \n</item>
        <item>REQUEST/MUSIC | 7:30 - 8:00am \n</item>
        <item>MUSIC/MYSTERY OF BOOKS| 8:10 - 10:00am \n</item>
        <item>IDILE AYO | 10:00 - 11:00am \n</item>
        <item>DYNAMIC TALENT | 11:00 - 1:00pm \n</item>
        <item>SPORT ARENA| 1:00 - 2:00pm \n</item>
        <item>NEWS WEEK REVIEW | 2:00 - 2:15pm \n</item>
        <item>MUSIC/DCA| 2:15 - 3:00pm \n</item>
        <item>RADIO DRAMA| 3:00 - 4:00pm \n</item>
        <item>RADIO ACTIVITY | 4:00 - 5:00pm \n</item>
        <item>ILERA LORO | 5:00 - 6:00pm \n</item>
        <item>HEBRON FM NEWS | 6:00 - 6:10pm \n</item>
        <item>CELEBRATION BELLS| 6:10 - 7:00pm \n</item>
        <item>SATURDAY BANT | 7:00 - 8:00pm \n</item>
        <item>LOVE ZONE | 8:00 - 9:55pm \n</item>
        <item>SHUTDOWN | 9:55 - 10:00pm \n</item>
    </array>
    <array name="sun_ar">
        <item>NATIONAL/CU ANTHEM | 5:50 - 6:00am \n</item>
        <item>WORSHIP SONGS | 6:00 - 7:00am \n</item>
        <item>BISHOP OYEDEPO MESSAGES | 7:00 - 8:00am \n</item>
        <item>HYMNALS | 8:00 - 10:00am \n</item>
        <item>MUSIC/DCA | 10:00 - 11:00am \n</item>
        <item>IMO BIBELI | 11:00 - 12:00pm \n</item>
        <item>GOSPEL JAMZ | 12:00 - 1:00pm \n</item>
        <item>MUSIC/DCA | 1:00 - 2:00pm \n</item>
        <item>HEBRON FM NEWS | 2:00 - 2:15pm \n</item>
        <item>RADIO DRAMA | 2:15 - 3:00pm \n</item>
        <item>ENTERTAINMENT ZONE | 3:00 - 4:00pm \n</item>
        <item>YOUTH CONNECT| 4:00 - 5:00pm \n</item>
        <item>HEBRON FM NEWS | 6:00 - 6:10pm \n</item>
        <item>MUSIC/DCA | 6:10 - 9:55pm \n</item>
        <item>SHUTDOWN | 9:55 - 10:00pm \n</item>
    </array>
</resources>
